adding segment annotation classes

--- a/src/main/resources/templates/placemark_fragment.xml
+++ b/src/main/resources/templates/placemark_fragment.xml
@@ -1,6 +1,6 @@
 <Placemark>
     <name>{NAME}</name>
-    <styleUrl>#icon-503-DB4436-normal</styleUrl>
+    <styleUrl>#placemark</styleUrl>
     <Point>
         <coordinates>
             {START_COORDINATE}
